fix game review spacing

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ h2 {
    display: flex;
    flex-direction: column;
    gap: 4px;
+   padding: 24px;
 }
 
 h3 {
